working on some features by DS